@@ -1,6 +1,7 @@
 2004-10-07  James Tanis  <jtt@buscemi.sysdetect.com>
 
 	* Baka/RT.pm: Return ticket number when ticket is created.
+	Add keywords method
 
 2004-10-04  James Tanis  <jtt@buscemi.sysdetect.com>
 
